scripts/nullaway/original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8.txt
../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/pipes/AggregatePipe.java:18: error: [NullAway] initializer method does not guarantee @NonNull field callback (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public AggregatePipe(Aggregate<I, O> agg) {
	       ^
    (see http://t.uber.com/nullaway )
../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/Pipeline.java:87: error: [NullAway] returning @Nullable expression from method with @NonNull return type
				return null;
				^
    (see http://t.uber.com/nullaway )
../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/Callbacks.java:51: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return result;
			^
    (see http://t.uber.com/nullaway )
../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/pipes/SortPipe.java:12: error: [NullAway] assigning @Nullable expression to @NonNull field
		comp =null;
		     ^
    (see http://t.uber.com/nullaway )
../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/sources/SourceWithPipe.java:33: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/sources/DirectoryList.java:17: error: [NullAway] assigning @Nullable expression to @NonNull field
		fileFilter = null;
		           ^
    (see http://t.uber.com/nullaway )
Note: ../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/Pipeline.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
6 errors
